Fix image distortion bug

--- a/src/styles/modules/_listElement.scss
+++ b/src/styles/modules/_listElement.scss
@@ -33,6 +33,7 @@ $estimition-height: 40px;
       width: 100%;
       height: 100%;
       border-radius: 60px;
+      object-fit: cover;
     }
   }
 
@@ -50,6 +51,7 @@ $estimition-height: 40px;
       width: 100%;
       height: 100%;
       border-radius: 2px;
+      object-fit: cover;
     }
   }
 
